# floating-ball

./: .env  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  api.md  mock_his.html  package-lock.json  package.json  pnpm-lock.yaml  test-statistics.html
.github/workflows/: release.yml
scripts/: release.mjs
src/: App.vue  main.ts  test-feedback.ts
src-tauri/: Cargo.toml  floating-ball.key  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: aliyun_speech.rs  http_server.rs  lib.rs  main.rs
src-tauri/src/commands/: feedback.rs  mod.rs
src-tauri/src/db/: mod.rs  models.rs
src/assets/: diagnoses.csv  items.csv  medical_catalog.json  medicines.csv  templates.json
src/components/: AnalyticsPanel.vue  BodyPartSelector.vue  ChatPanel.vue  ConsultationPage.vue  FactCheckHighlight.vue  FactCheckNotification.vue  FactCheckWidget.vue  Icon.vue  IconShowcase.vue  LoadingSpinner.vue  ReceptionCapsule.vue  RiskAlertBubble.vue  RiskAlertPanel.vue  SettingsPanel.vue  SymptomManagement.vue  SystemCategorySelector.vue  Toast.vue  UpdateChecker.vue  VoiceCapsule.vue  VoiceConsultationResult.vue
src/prompts/: README.md  index.ts  prompts.ts
src/services/: aliyunSpeech.ts  audioRecorder.ts  factChecker.ts  feedback.ts  llm.ts  medicalData.ts  textGeneration.ts  themeService.ts
src/styles/: design-tokens.css  global-overrides.css  themes.ts  utilities.css
src/types/: feedback.ts
src/utils/: theme.ts
