[package]
name = "floating-ball"
version = "0.1.19"
description = "A Desktop Floating Ball Application"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "floating_ball_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.13", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.13", features = ["macos-private-api"] }
tauri-plugin-opener = "2.0.0-beta.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-process = "2.3.1"
tauri-plugin-store = "2.0.0-beta.10"
actix-web = "4.12.1"
actix-cors = "0.7.1"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
tauri-plugin-updater = "2.9.0"
tauri-plugin-deep-link = "2.0.0-beta.10"
tauri-plugin-single-instance = "2.0.0-beta.12"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
url = "2"

